# CADAC

./: .gitignore  BUILD_GUIDE.md  CREATING_SIMULATIONS.md  Makefile  QUICKSTART.md  README.md  create_makefiles.sh  pyproject.toml  test_ball3.py  test_constructive.py
cadac_builder/: __init__.py  compiler.py  component_registry.py  input_generator.py  simulation.py  trajectory.py
components/: CATALOG.md  EXAMPLES.md  EXAMPLE_PROMPTS.md  INDEX.md  INDEX_TEMPLATE.md  PROGRESS.md  README.md  STATUS.md
components/actuators/: INDEX.md  rcs_simple.cpp  tvc_simple.cpp
components/aerodynamics/: INDEX.md  aero_3dof_table.cpp  aerodynamics_6dof.cpp  drag_simple.cpp
components/control/: INDEX.md  actuator_first_order.cpp  control_accel_6dof.cpp  control_accel_autopilot.cpp  control_none.cpp  control_rate_damping.cpp
components/dynamics/: INDEX.md  euler_6dof.cpp  forces_3dof.cpp  forces_6dof.cpp  newton_6dof.cpp
components/environment/: INDEX.md  atmosphere_constant.cpp  atmosphere_us76.cpp  gravity_constant.cpp  gravity_wgs84_simple.cpp  wind_constant.cpp  wind_none.cpp
components/guidance/: INDEX.md  guidance_none.cpp  guidance_pitch_program.cpp  guidance_proportional_nav.cpp
components/kinematics/: INDEX.md  kinematics_3dof_flat.cpp  kinematics_6dof.cpp
components/navigation/: INDEX.md  intercept_simple.cpp  target_const_velocity.cpp  target_fixed.cpp
components/propulsion/: INDEX.md  propulsion_staging.cpp  rocket_motor_simple.cpp  thrust_constant.cpp  thrust_table.cpp
components/sensors/: INDEX.md  gps_perfect.cpp  seeker_perfect.cpp
components/utilities/: INDEX.md  termination.cpp  time_management.cpp
framework/: class_functions.cpp
pycas/: README.md  __init__.py  compiler.py  component.py  input_generator.py  runner.py  simulation.py  trajectory.py
tools/: generate_index_files.py
(+51 files in other folders)
